--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,30 @@
 * {
   font-family: 'Oswald', sans-serif;
 }
+
+
+body{
+  background: #eee;
+}
+.bookCard {
+  padding: 0;
+  background-color: #fff;
+  border: 1px solid #ddd;;
+  color: #656262;
+  margin: 0 0px 30px 0px;
+
+  .img-thumbnail {
+    padding: 0;
+    line-height: 1.5;
+    border: none;
+    border-radius: 0;
+    height: 265px;
+  }
+
+  .title p {
+    font-size: 16px;
+  }
+  .author, .publisherInfo {
+    font-size: 13px;
+  }
+}
