--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,7 +6,7 @@
 
     <div class="row">
 
-        <div class="col-sm-6 col-md-4" ng-repeat="book in books" ng-hide="loading" ng-cloak>
+        <div class="col-sm-6 col-md-4" ng-repeat="book in filteredBooks" ng-hide="loading" ng-cloak>
             <div class="row bookCard">
                 <div class="col-md-6 text-hide imgContainer">
                     <img ng-src="{{book.image_url}}" class="img-responsive img-thumbnail" />
@@ -33,6 +33,13 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid">
+    <div class="row paginationContainer">
+    <ul uib-pagination total-items="totalItems"
+     ng-model="currentPage" ng-change="numPages()" class="pagination pagination-sm"
+     items-per-page="itemsPerPage"></ul>
+     </div>
 
+     </div>
 
 </div>
