--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@ body{
   border: 1px solid #ddd;;
   color: #656262;
   margin: 0 0px 30px 0px;
+  
 
   .img-thumbnail {
     padding: 0;
@@ -86,4 +87,26 @@ body{
 }
 .row.paginationContainer{
   margin-bottom: 100px;
+}
+
+.inputContainer {
+  padding: 20px;
+  background: #ddd;
+  margin-bottom: 30px;
+  font-size: 13px;
+  label{
+    padding-top: 8px;
+  }
+
+    input#title {
+      margin-left: 10px;
+    }
+    .search input{
+      width:100%;
+      height: 35px;
+      padding-left: 15px;
+    }
+}
+.inputRow{
+  margin: 0;
 }
