--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body ng-app="app.bookshelf">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row"><hr /></div>
       <div class="row bg-info">
         <h1 class="text-md-center p-a-1">Bookshelf Sample Codebase</h1>
