--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,9 +28,29 @@ body{
   border: 1px solid #ddd;;
   color: #656262;
   margin: 0 0px 30px 0px;
-  
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.075);
+  box-shadow: 0 1px 2px rgba(0,0,0,.075);
+  border-top: 4px solid #ddd;
+  border-radius: 7px 5px 0 0;
+  border-top-color: #92a2a2;
+  line-height: 1.42857143;
 
-  .img-thumbnail {
+  .imgContainer{
+    padding:0;
+  }
+
+  .infoWrapper{
+    display: table;
+    height: 265px;
+  }
+
+  .infoInnerWrapper{
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+  }
+
+  .img-thumbnail{
     padding: 0;
     line-height: 1.5;
     border: none;
@@ -39,10 +59,10 @@ body{
   }
 
   .title p {
-    font-size: 16px;
+    font-size: 14px;
   }
   .author, .publisherInfo {
-    font-size: 13px;
+    font-size: 12px;
   }
 }
 
@@ -109,4 +129,46 @@ body{
 }
 .inputRow{
   margin: 0;
+}
+
+@media (min-width: 768px){
+  .mainContainer.container{
+    max-width: 745px;
+  }
+
+}
+
+@media (min-width: 768px){
+  .cardContainer.col-md-4{
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+}
+@media (max-width: 768px) {
+  .col-md-6.info {
+    display: none;
+  }
+  .bookCard .img-thumbnail {
+    height: 355px;
+    width: 100%;
+  }
+
+}
+
+@media (max-width: 544px){
+  .cardContainer.col-md-4{
+    margin: 0 15px;
+  }
+
+
+}
+.loading{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 105%;
+  height: 100%;
+  background: #fff;
+  background: rgba(255,255,255,.9);
+  z-index: 99;
 }
